; ModuleID = '/home/carl/AnghaBench/Cello/tests/extr_test.c_TestType_Cmp.c'
source_filename = "/home/carl/AnghaBench/Cello/tests/extr_test.c_TestType_Cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TestType = type { i64 }

@TestType = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @TestType_Cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TestType_Cmp(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TestType*, align 8
  %6 = alloca %struct.TestType*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @TestType, align 4
  %9 = call %struct.TestType* @cast(i32 %7, i32 %8)
  store %struct.TestType* %9, %struct.TestType** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @TestType, align 4
  %12 = call %struct.TestType* @cast(i32 %10, i32 %11)
  store %struct.TestType* %12, %struct.TestType** %6, align 8
  %13 = load %struct.TestType*, %struct.TestType** %5, align 8
  %14 = getelementptr inbounds %struct.TestType, %struct.TestType* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.TestType*, %struct.TestType** %6, align 8
  %17 = getelementptr inbounds %struct.TestType, %struct.TestType* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = sub nsw i64 %15, %18
  %20 = trunc i64 %19 to i32
  ret i32 %20
}

declare dso_local %struct.TestType* @cast(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
